@@ -170,6 +170,8 @@ version 26-git (????-??-??):
   - enhancement: allow send message instatly to customers which were found in customer search
     form [chilan]
   - devel/improvement: bumped used serwersms API from v1 to v2 [chilan]
+  - enhancement: 'phpui.timetable_user_row_limit' (default: '4') configuration variable to hide
+    assigned users to event when there is too many user assigned [interduo]
 
 version 25.0 (2020-05-15):
 
